# centralisation

./: README.md  build.py  check_assets.py  docker-compose.yml  dockerfile  links.json  links.yaml  links2.yaml  links_2.yaml  nginx.conf  package.json  pyproject.toml  tailwind.config.js  test.py
.github/workflows/: build.yml  publish.yml  test.yml
src/: index.html  index2.html  index3.html
src/assets/: stylesheet.css
src/assets/stylesheets/: dark.css  extra-large.css  large.css  light.css  main.css  medium.css  small.css  test.css
templates/: index.html
