[tool.poetry]
name = "centralisation"
version = "0.1.0"
description = ""
authors = ["benjamindenise <benjamin.denise@protonmail.com>"]
homepage = "https://centralisation.eclair.ec-lyon.fr/"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
