[tool.poetry]
name = "centralisation"
version = "0.1.0"
description = ""
authors = ["benjamindenise <benjamin.denise@protonmail.com>"]
homepage = "https://centralisation.eclair.ec-lyon.fr/"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.5"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
